tests/ui/ok_if_let.stderr
error: Matching on `Some` with `ok()` is redundant
  --> $DIR/ok_if_let.rs:7:5
   |
7  | /     if let Some(y) = x.parse().ok() {
8  | |         y
9  | |     } else {
10 | |         0
11 | |     }
   | |_____^
   |
note: lint level defined here
  --> $DIR/ok_if_let.rs:4:9
   |
4  | #![deny(if_let_some_result)]
   |         ^^^^^^^^^^^^^^^^^^
   = help: Consider matching on `Ok(y)` and removing the call to `ok` instead

error: aborting due to previous error

